# gconfig

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: gubsy-example.md  plan.md
examples/: gconfig_demo.cpp
include/gconfig/: document.hpp  document_list.hpp  gconfig.hpp  io.hpp  schema.hpp  value.hpp
scripts/: build.sh  run.sh
src/: document.cpp  document_list.cpp  io.cpp  schema.cpp  value.cpp
tests/: gconfig_tests.cpp
